feat: Implement level-based coloring for hierarchical diagrams
- Updated the diagram generation options to include `colorByLevel` for enabling level-based coloring.
- Modified the color palette structure to support level-specific colors in `bcm-style-example.js` and `browser-example.html`.
- Enhanced the default style options to include `colorByLevel` in `defaults.ts`.
- Adjusted the `SvgRenderer` to apply background colors based on node levels or leaf status.
- Updated the `StyleOptions` interface to define `colorByLevel` property.
- Changed module type to ES2020 in `tsconfig.json` and `rollup.config.js` for better compatibility.
- Ensured external dependencies are properly handled in the UMD and ESM builds.

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "hierarchical-diagram-generator",
   "version": "1.0.0",
   "description": "Generate hierarchical diagrams from JSON data",
+  "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "bin": {
