fix: Add author name to package.json for proper attribution

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "png",
     "pdf"
   ],
-  "author": "",
+  "author": "Thomas Klok Rohde",
   "license": "MIT",
   "dependencies": {
     "@resvg/resvg-js": "^2.4.1",
